--- a/MVVM_App.csproj
+++ b/MVVM_App.csproj
@@ -14,4 +14,10 @@
     <Folder Include="View\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
 </Project>
