--- a/MVVM_App.csproj
+++ b/MVVM_App.csproj
@@ -8,14 +8,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="ModelView\" />
-    <Folder Include="Commands\" />
+    <Compile Remove="Commands\**" />
+    <Compile Remove="ModelView\**" />
+    <Compile Remove="Model\**" />
+    <EmbeddedResource Remove="Commands\**" />
+    <EmbeddedResource Remove="ModelView\**" />
+    <EmbeddedResource Remove="Model\**" />
+    <None Remove="Commands\**" />
+    <None Remove="ModelView\**" />
+    <None Remove="Model\**" />
+    <Page Remove="Commands\**" />
+    <Page Remove="ModelView\**" />
+    <Page Remove="Model\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
